--- a/admin/admin_index.html
+++ b/admin/admin_index.html
@@ -18,12 +18,7 @@
         </ul>
         <ul class="layui-nav layui-layout-right">
             <li class="layui-nav-item">
-                <a href="javascript:;" id="user_show">
-                </a>
-                <dl class="layui-nav-child">
-                    <dd><a href="javascript:void(0)" onclick="adminInfo()">基本资料</a></dd>
-                    <dd><a href="javascript:void(0)" onclick="adminInfo()">安全设置</a></dd>
-                </dl>
+                <a id="user_show" href="javascript:void(0)" onclick="adminInfo()"></a>
             </li>
             <li class="layui-nav-item"><a href="javascript:void(0)" onclick="signOut()">退了</a></li>
         </ul>
@@ -40,13 +35,13 @@
                         <dd><a onclick="three()">被驳回文章</a></dd>
                     </dl>
                 </li>
-                <li class="layui-nav-item">
-                    <a href="javascript:;">类别管理</a>
-                    <dl class="layui-nav-child">
-                        <dd><a href="javascript:;">类别添加</a></dd>
-                        <dd><a href="javascript:;">类别修改</a></dd>
-                    </dl>
-                </li>
+                <!--<li class="layui-nav-item">-->
+                    <!--<a href="javascript:;">类别管理</a>-->
+                    <!--<dl class="layui-nav-child">-->
+                        <!--<dd><a href="javascript:;">类别添加</a></dd>-->
+                        <!--<dd><a href="javascript:;">类别修改</a></dd>-->
+                    <!--</dl>-->
+                <!--</li>-->
                 <li class="layui-nav-item"><a href="javascript:void(0)" onclick="addPhuser()">添加发布用户</a></li>
             </ul>
         </div>
@@ -198,6 +193,7 @@
         background-image: url("../images/upload/user_face.png");
         background-size: 50px 50px;
         background-repeat:no-repeat;
+        overflow: hidden;
     }
     #show_article_user_info_name{
         width: 200px;
@@ -288,7 +284,7 @@
     var strft=false; // 输入用户名长度是否超出标志   超出为true
 
     function firstShow() {//显示用户头像和昵称
-        $("#user_show").append("<img src=" + getCookie("admicon") + " class='layui-nav-img'>" + getCookie("admname"));
+        $("#user_show").append("<img src='../images/upload/" + getCookie("admicon") + "' class='layui-nav-img'>" + getCookie("admname"));
     }
     
     layui.use([ 'table'], function(){
@@ -301,7 +297,7 @@
         table = layui.table //表格
 
         //向世界问个好
-        layer.msg('Hello World');
+        // layer.msg('Hello World');
 
         //执行一个 table 实例
         table.render({
@@ -551,7 +547,7 @@
                 $("#show_article_head_title").text(str.aietitle);
                 $("#show_article_content").html(str.aiecontent);
                 //发布人头像 昵称 时间
-                $("#show_article_user_info_img").html("<img src='" + str.phicon + "' width='50' height='50'>");
+                $("#show_article_user_info_img").html("<img src='../images/upload/" + str.phicon + "' width='50' height='50'>");
                 $("#show_article_user_info_name").text(str.phname);
                 $("#show_article_user_info_time").text(str.aietime);
             },
@@ -727,6 +723,7 @@
             strft=false;
         }
     }
+
 
     function adminInfo() {
         window.location.href = "admin_info.html";
