--- a/admin/admin_login.html
+++ b/admin/admin_login.html
@@ -347,7 +347,7 @@
                         admnum:rl_name,
                         admpwd:el_pwdo,
                         admname:"用户u_298",
-                        admicon:"../images/user_face.png"
+                        admicon:"user_face.png"
                     },//要提交的数据是一个JSON
                     type:"POST", //提交方式
                     dataType:"TEXT", //返回数据的类型
